syntax = "proto3";

package proto;

option go_package = "github.com/NeGat1FF/order-service/proto";

service PriceService {
  rpc GetPrice(PriceRequest) returns (PriceResponse) {}
}

message PriceRequest {
  string product_id = 1;
}

message PriceResponse {
  string price = 1;
}